Fixing navbar overlapping

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -225,8 +225,8 @@ footer {
 
 
 #sidebarcon {
-  position: fixed;
-  width: 15.8%;
+  /* position: fixed;
+  width: 15.8%; */
 
 }
 
